@@ -1,3 +1,8 @@
+Tue Jul 05 03:03:57 BST 2005  Olly Betts <olly@survex.com>
+
+	* include/xapian/queryparser.h: Oops, failed to check in header
+	  changes for last change.
+
 Mon Jul 04 15:50:55 BST 2005  Olly Betts <olly@survex.com>
 
 	* queryparser/queryparser.lemony,queryparser/queryparser.cc:
